<resources>
    <string name="app_name">FifthSemesterHomeworks</string>
    <string name="text_view_hint">ENTER NUMBER</string>
    <string name="text_number_one">1</string>
    <string name="text_number_two">2</string>
    <string name="text_number_three">3</string>
    <string name="text_number_four">4</string>
    <string name="text_number_five">5</string>
    <string name="text_number_six">6</string>
    <string name="text_number_seven">7</string>
    <string name="text_number_eight">8</string>
    <string name="text_number_nine">9</string>
    <string name="text_number_zero">0</string>
    <string name="text_sum">+</string>
    <string name="text_clear">C</string>
    <string name="text_change_theme">Change Theme</string>
    <string name="text_result">=</string>
</resources>
