<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTextView"
        android:hint="@string/text_view_hint"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="96dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/numberOneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number_one"
        app:layout_constraintBottom_toTopOf="@id/numberFourButton"
        app:layout_constraintEnd_toStartOf="@id/numberTwoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultTextView" />

    <Button
        android:id="@+id/numberTwoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number_two"
        app:layout_constraintBottom_toTopOf="@id/numberFiveButton"
        app:layout_constraintEnd_toStartOf="@id/numberThreeButton"
        app:layout_constraintStart_toEndOf="@+id/numberOneButton"
        app:layout_constraintTop_toBottomOf="@id/resultTextView" />

    <Button
        android:id="@+id/numberThreeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number_three"
        app:layout_constraintBottom_toTopOf="@id/numberSixButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberTwoButton"
        app:layout_constraintTop_toBottomOf="@id/resultTextView"/>

    <Button
        android:id="@+id/numberFourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number_four"
        app:layout_constraintEnd_toStartOf="@id/numberFiveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/numberSevenButton"
        app:layout_constraintTop_toBottomOf="@id/numberOneButton" />

    <Button
        android:id="@+id/numberFiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number_five"
        app:layout_constraintEnd_toStartOf="@id/numberSixButton"
        app:layout_constraintStart_toEndOf="@+id/numberFourButton"
        app:layout_constraintBottom_toTopOf="@id/numberEightButton"
        app:layout_constraintTop_toBottomOf="@id/numberTwoButton" />

    <Button
        android:id="@+id/numberSixButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/numberNineButton"
        app:layout_constraintStart_toEndOf="@id/numberFiveButton"
        app:layout_constraintTop_toBottomOf="@id/numberThreeButton" />

    <Button
        android:id="@+id/numberSevenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number_seven"
        app:layout_constraintBottom_toTopOf="@id/sumButton"
        app:layout_constraintEnd_toStartOf="@id/numberEightButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberFourButton" />

    <Button
        android:id="@+id/numberEightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number_eight"
        app:layout_constraintBottom_toTopOf="@id/numberZeroButton"
        app:layout_constraintEnd_toStartOf="@id/numberNineButton"
        app:layout_constraintStart_toEndOf="@+id/numberSevenButton"
        app:layout_constraintTop_toBottomOf="@id/numberFiveButton" />

    <Button
        android:id="@+id/numberNineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number_nine"
        app:layout_constraintBottom_toTopOf="@id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/numberEightButton"
        app:layout_constraintTop_toBottomOf="@id/numberSixButton" />

    <Button
        android:id="@+id/sumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sum"
        app:layout_constraintBottom_toTopOf="@id/changeThemeButton"
        app:layout_constraintEnd_toStartOf="@id/numberEightButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberSevenButton" />

    <Button
        android:id="@+id/numberZeroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number_zero"
        app:layout_constraintBottom_toTopOf="@id/changeThemeButton"
        app:layout_constraintEnd_toStartOf="@id/numberNineButton"
        app:layout_constraintStart_toEndOf="@+id/numberSevenButton"
        app:layout_constraintTop_toBottomOf="@id/numberEightButton" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_clear"
        app:layout_constraintBottom_toTopOf="@id/changeThemeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/numberEightButton"
        app:layout_constraintTop_toBottomOf="@id/numberNineButton" />

    <Button
        android:id="@+id/changeThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_change_theme"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>